--- a/FOJ.App/app/views/about.html
+++ b/FOJ.App/app/views/about.html
@@ -1,18 +1,12 @@
 <div class="row marketing">
     <div class="row">
         <div class="container">
-            <h1>About Commute List</h1>
+            <h1>About</h1>
             <p>
-                This page exists to help people choose their best daily commute routes to avoid traffic jams. 
-                I'm sure that you'we been in situation when there are just to many traffic jams on your 
-                way to or from work. So to avoid that, you can help others on your daily commute to submit your
-                best route, so that other can see when you're off to work, where do you drive and how much time you spent 
-                on the road. 
+                Go add some job!
             </p>
             <p>
-                Commute List uses Google Maps to calculate route and to show route on map. You can
-                however modify your route by dragging route line (just like on Google Maps) to your wishes. Alternative routes are 
-                often faster than the one that Google Maps suggests.
+                
             </p>
         </div>
     </div>
