--- a/FOJ.App/app/views/new.html
+++ b/FOJ.App/app/views/new.html
@@ -1,6 +1,6 @@
 
 
-<div class="container">
+<div class="container" ng-if="!jobPreview">
 
     <div class="row marketing">
 
@@ -132,7 +132,7 @@
 
             <div class="form-group row">
                 <div class="col-sm-10">
-                    <input type="submit" class="btn btn-success" ng-click="postJob()" value="Preview your ad">
+                    <input type="submit" class="btn btn-success" ng-click="previewAd()" value="Preview your ad">
                     <!--<input type="submit" class="btn btn-success" ng-click="postJob()" ng-disabled="postJobForm.$invalid"> -->
                 </div>
             </div>
@@ -142,3 +142,4 @@
 
 </div>
 
+<div ng-include="'views/preview.html'" ng-if="jobPreview"></div>
