--- a/FOJ.App/app/views/about.html
+++ b/FOJ.App/app/views/about.html
@@ -2,11 +2,17 @@
     <div class="row">
         <div class="container">
             <h1>About</h1>
+            
             <p>
-                Go add some job!
+                <span>
+                This is a site that offers family friendly jobs. Jobs that offer something more besides your paycheck: a chance to be with your family.
+                
+                </span>
             </p>
             <p>
-                
+                <span>
+                    Logo is made from awesome pictures downloaded from <a href="http://www.freepik.com">Designed by Freepik</a>
+                </span>
             </p>
         </div>
     </div>
