--- a/FOJ.App/app/views/preview.html
+++ b/FOJ.App/app/views/preview.html
@@ -2,7 +2,7 @@
     <div class="row marketing">
         <h1 class="job-title">
             {{job.title}} by {{job.companyName}}
-            <div>{{job.salaryFrom}} - {{job.salaryTo}}</div>
+            <div ng-if="job.salaryFrom">{{job.salaryFrom}} - {{job.salaryTo}}</div>
         </h1>
         
         <p>
@@ -11,34 +11,36 @@
         </p>  
         <p>
             <span class="job-location-label">Location:</span>
-            <span class="job-location-description">
-                {{job.city}}, 
-            </span>
-            <span ng-if="job.state" class="job-location-description">{{job.state.name}}, </span>
-            <span class="job-location-description">{{job.country.name}}</span>
+            <span ng-if="job.city" class="job-location-description">{{job.city}}</span>
+            <span ng-if="job.state" class="job-location-description trix-content"> {{job.state.name}}</span>
+            <span ng-if="job.country" class="job-location-description"> {{job.country.name}}</span>
         </p>
 
         <p>
             <h2>Family friendly indicator</h2>
             <span ng-if="job.remote" class="label label-success">allow remote</span>
+            &nbsp
             <span ng-if="job.flexitime" class="label label-success">flexi time</span>
+            &nbsp
             <span ng-if="job.parental" class="label label-success">
                 parental leave
-                <span class="badge">{{job.parentalMonths}} months</span>
+                <span class="badge">{{job.parentalMonths}} months</span> 
             </span>
+            &nbsp
+            <span ng-if="job.otherBenefit" class="label label-success">{{job.otherBenefit}}</span>
         </p>
 
         <p>
             <h2>Job description</h2>
-            <div class="job-description">
-                {{job.description}}
+            <div class="job-description" ng-bind-html='job.description'>
+                
             </div>
         </p>
 
         <p>
             <h2>How to apply</h2>
             <span>
-                {{job.jobContactEmail}}
+                <a target="_blank" href="{{job.jobContactEmail}}">{{job.jobContactEmail}}</a>
             </span>
         </p>
 
