--- a/FOJ.App/app/views/preview.html
+++ b/FOJ.App/app/views/preview.html
@@ -24,7 +24,7 @@
             &nbsp
             <span ng-if="job.parental" class="label label-success">
                 parental leave
-                <span class="badge">{{job.parentalMonths}} months</span> 
+                <span class="badge">{{job.parental}} months</span> 
             </span>
             &nbsp
             <span ng-if="job.otherBenefit" class="label label-success">{{job.otherBenefit}}</span>
